--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "langchain>=1.2.0",
     "langchain-classic>=1.0.0",
+    "langchain-core>=1.2.5",
     "langchain-google-genai>=4.1.2",
     "langchain-mongodb>=0.9.0",
     "langchain-openai>=1.1.6",
@@ -16,6 +17,7 @@ dependencies = [
     "langgraph-store-mongodb>=0.1.1",
     "langmem>=0.0.30",
     "loguru>=0.7.3",
+    "pip-audit>=2.10.0",
     "psycopg[binary]>=3.3.2",
     "pymongo>=4.15.5",
     "python-dotenv>=1.2.1",
